<resources>
    <string name="app_name">DeviceInfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_text">Product Name</string>
    <string name="nav_user_apps">User Apps</string>
    <string name="nav_sys_apps">System Apps</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_demo_widget">Widget</string>
    <string name="nav_about">About Me</string>
    <string name="nav_donate">Donate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="nav_devices">Devices</string>
    <string name="nav_battery">Battery</string>

    <string name="unknown">UNKNOWN</string>

    <string name="info_manufacturer">Manufacturer</string>
    <string name="info_Brand">Brand</string>
    <string name="info_Serial_No">Serial No</string>
    <string name="info_locale">Locale</string>
    <string name="info_model">Model</string>
    <string name="info_androidId">Android ID</string>
    <string name="info_board">Board</string>
    <string name="info_bootloader">Bootloader</string>
    <string name="info_user">User</string>
    <string name="info_host">Host</string>
    <string name="info_screen">Screen Resolution</string>

    <string name="current_activity">Current Activity</string>
    <string name="current_activity_summary">Show Current Activity name</string>
    <string name="movement_title">Long Seat Notify</string>
    <string name="movement_summary">One Hour Notify</string>
    <string name="cancel">Cancle</string>
    <string name="confirm">Confim</string>
    <string name="accessibilityService_msg">[Open the suspended window]Need to go to [accessibility] to open</string>

    <string name="empty_text">NO DATA!</string>
    <string name="network_error">Network Error!</string>
    <string name="loading">loading...</string>
    <string name="notice">RecyclerView</string>

    <!--widgets names-->
    <string name="dialog_widgets">Dialogs</string>
    <string name="recyclerview_widgets">RecyclerView</string>
    <string name="lbs_amap">lbs_amap</string>

    <string name="permission_get_accounts_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">Without this permission, this feature cannot be turned on. Please turn on the permission.PERMISSION_RECORD_AUDIO</string>

    <string name="service_description">Click the switch button in the upper right corner to open the auxiliary function\n\n(Display the current active window package name and Activity class name)</string>
</resources>
